[gd_scene load_steps=2 format=2]

[ext_resource path="res://InventorySystem.gd" type="Script" id=1]

[node name="InventorySystem" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 408.0
margin_top = 521.0
margin_right = 468.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 404, -36 )

[node name="Button2" type="Button" parent="."]
margin_left = 336.0
margin_top = 521.0
margin_right = 395.0
margin_bottom = 580.0

[node name="Button3" type="Button" parent="."]
margin_left = 480.0
margin_top = 521.0
margin_right = 539.0
margin_bottom = 580.0

[node name="Button4" type="Button" parent="."]
margin_left = 552.0
margin_top = 521.0
margin_right = 611.0
margin_bottom = 580.0

[node name="Button5" type="Button" parent="."]
margin_left = 625.0
margin_top = 521.0
margin_right = 684.0
margin_bottom = 580.0

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
